# vm-detector

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-app.yml
src/vm_detector/: __init__.py  base.py  cli.py  factory.py  linux_detector.py  main.py  models.py  windows_detector.py
src/vm_detector/config/: vm_detector_config.yaml
tests/: __init__.py  conftest.py  test_base.py  test_integration.py  test_linux_detector.py  test_windows_detector.py
